--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="pricing-container">
       <div class="heading">
-      <h1>Simple, <span>traffic-based pricing</span></h1>
+      <h1>Simple, traffic-based pricing</h1>
       <p>Sign-up for our 30-day trial. No credit card required.</p>
       </div> 
 
